# tantalisp

./: .gitignore  Cargo.toml  PRELUDE.md  README.md  prelude.tlsp  test_prelude.tlsp
.github/workflows/: rust.yml
benchmarks/: BENCHMARKS.md  README.md  gabriel_results.csv  run_gabriel.sh
benchmarks/gabriel/: div2.tlsp  fib.tlsp  tak.tlsp  takl.tlsp  takl_small.tlsp  triang.tlsp
benchmarks/gabriel/clojure/: div2.clj  fib.clj  tak.clj  takl.clj  triang.clj
benchmarks/gabriel/commonlisp/: div2.lisp  fib.lisp  tak.lisp  takl.lisp  triang.lisp
benchmarks/gabriel/scheme/: div2.scm  div2.scm.bak  div2.scm.bak2  fib.scm  fib.scm.bak  fib.scm.bak2  tak.scm  takl.scm  takl.scm.bak  takl.scm.bak2  triang.scm  triang.scm.bak  triang.scm.bak2
samples/: sample.tlsp  tail.tlsp
src/: codegen.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/codegen/: runtime.rs
src/codegen/runtime/: garbage_collector.rs
src/ir/: instructions.rs  ir_builder.rs  ir_builder_tests.rs  ir_types.rs  mod.rs  ref_count_optimizer.rs  type_inference.rs
src/v2_codegen/: codegen.rs  mod.rs
